--- a/jupyter c kernel.ipynb
+++ b/jupyter c kernel.ipynb
@@ -22,7 +22,11 @@
    ],
    "source": [
     "#include <stdio.h>\n",
-    "\n",
+    "/*\n",
+    "    C language on the JUPYTER\n",
+    "    It is awesome!\n",
+    "    But, I think cmd is more comfortable for C\n",
+    "*/\n",
     "int main(void){\n",
     "    printf(\"Hello World in the JUPYTER! \\n\");\n",
     "}"
